--- a/index.html
+++ b/index.html
@@ -5,55 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pritom Web Dev</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <!-- first section -->
-    <section class="header-sec">
-        <img class="img-fluid fallback-avater" src="images/avater for 350px width.png" alt="">
-        <section class="container header-sec-content">
-            <div class="half-width about">
-                <div class="half-width-child">
-                    <h2>Hello I'm</h2>
-                    <h1 id="Your-name">Sayed Pritom</h1>
-                    <div id="header-about-me">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos maxime assumenda necessitatibus delectus odio.</p>
-                        <a href="#" class="button">Hire Me</a>
-                    </div>
-                </div>
-            </div>
-            <div class="half-width avater">
-                <div class="half-width-child">
-                    <img class="img-fluid" src="images/sayed.png" alt="">
-                </div>
-            </div>
-        </section>
-        <section class="container">
-            <div id="header-about-me-fallback">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos maxime assumenda necessitatibus delectus odio.</p>
-                <a href="#" class="button">Hire Me</a>
-            </div>
-        </section>
-    </section>
-    <!-- first section -->
-
-    <!-- second section -->
-    <section class="second-sec">
-        <section class="container">
-            <div class="row justify-content-between">
-                <div class="col-sm-4">
-                    <img class="img-fluid" src="images/sayed_dream.png" alt="">
-                </div>
-                <div class="col-sm-6">
-                    <h2 class="py-2">Biography</h2>
-                    <p class="py-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti temporibus quas totam iste facere vitae reprehenderit exercitationem distinctio iure incidunt quis voluptatum beatae, nulla, atque numquam non iusto ab itaque</p>
-                    <a href="" class="button py-2">Download CV</a>
-                </div>
-            </div>
-        </section>
-    </section>
-    <!-- second section -->
+    <h1 class="bg-danger">Hello</h1>
+    <h2>World</h2>
 </body>
 </html>
