--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <!-- first section -->
     <section class="header-sec">
-        <img class="img-fluid fallback-avater" src="images/avater for 350px width.png" alt="">
         <section class="container header-sec-content">
+            <img class="img-fluid fallback-avater" src="images/avater for 350px width.png" alt="">
             <div class="half-width about">
                 <div class="half-width-child">
                     <h2>Hello I'm</h2>
@@ -37,9 +37,7 @@
             </div>
         </section>
     </section>
-    <!-- first section -->
-
-    <!-- second section -->
+    <!-- second section(Biography) -->
     <section class="second-sec">
         <section class="container">
             <div class="row justify-content-between">
@@ -54,6 +52,16 @@
             </div>
         </section>
     </section>
-    <!-- second section -->
+    <!-- Third section(Latest Work) -->
+    <section class="work-sec">
+        <div class="container">
+            <h2 class="text-center">My Latest Works</h2>
+            <div class="row">
+                <div class="col-sm-4 col-9 work"><img class="img-fluid" src="images/latest-work/work-1.png" alt=""></div>
+                <div class="col-sm-4 col-9 work"><img class="img-fluid" src="images/latest-work/work-2.jpg" alt=""></div>
+                <div class="col-sm-4 col-9 work"><img class="img-fluid" src="images/latest-work/work-3.jpg" alt=""></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
