--- a/index.html
+++ b/index.html
@@ -63,5 +63,19 @@
             </div>
         </div>
     </section>
+    <!-- Fourth section(What clients say)  -->
+    <footer>
+        <div class="container text-center">
+            <h2>What Clients Say</h2>
+            <h6>Bruce Moccy</h6>
+            <small>Founder & CEO Alies</small>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <div class="mx-auto e-mail"> 
+                <p>Leave me a message at</p>
+                <h5>sayedpritom999@gmail.com</h5>
+            </div>
+            <small class="copyright">A Happy Student of Programming Hero Initiative 2020</small>
+        </div>
+    </footer>
 </body>
 </html>
