--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- first section -->
     <section class="header-sec">
         <section class="container header-sec-content">
-            <img class="img-fluid fallback-avater" src="images/avater for 350px width.png" alt="">
+            <div class="id">
+                <img class="img-fluid fallback-avater" src="images/avater for 350px width.png" alt="">
             <div class="half-width about">
                 <div class="half-width-child">
                     <h2>Hello I'm</h2>
@@ -28,6 +29,7 @@
                 <div class="half-width-child">
                     <img class="img-fluid" src="images/sayed.png" alt="">
                 </div>
+            </div>
             </div>
         </section>
         <section class="container">
@@ -44,10 +46,12 @@
                 <div class="col-sm-4">
                     <img class="img-fluid" src="images/sayed_dream.png" alt="">
                 </div>
-                <div class="col-sm-6">
-                    <h2 class="py-2">Biography</h2>
-                    <p class="py-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti temporibus quas totam iste facere vitae reprehenderit exercitationem distinctio iure incidunt quis voluptatum beatae, nulla, atque numquam non iusto ab itaque</p>
-                    <a href="" class="button py-2">Download CV</a>
+                <div class="col-sm-6 my-auto">
+                    <div>
+                        <h2 class="py-2">Biography</h2>
+                        <p class="py-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti temporibus quas totam iste facere vitae reprehenderit exercitationem distinctio iure incidunt quis voluptatum beatae, nulla, atque numquam non iusto ab itaque</p>
+                        <a href="" class="button py-2">Download CV</a>
+                    </div>
                 </div>
             </div>
         </section>
